// Vitest Snapshot v1

exports[`render login form component > should render RegisterForm component 1`] = `
<Card
  className="register-form__card"
  size="small"
  title="Register"
>
  <ForwardRef(InternalForm)
    onFinish={[Function]}
  >
    <FormItem
      label="Username"
      name="username"
      rules={
        [
          {
            "message": "Username must be at least 3 characters",
            "min": 3,
          },
          {
            "message": "Please input your username!",
            "required": true,
          },
        ]
      }
    >
      <Input
        type="text"
      />
    </FormItem>
    <FormItem
      label="Email"
      name="email"
      rules={
        [
          {
            "message": "The input is not valid email!",
            "type": "email",
          },
          {
            "message": "Please input an email!",
            "required": true,
          },
        ]
      }
    >
      <Input
        type="text"
      />
    </FormItem>
    <FormItem
      label="Password"
      name="password"
      rules={
        [
          {
            "message": "Please input your password!",
            "required": true,
          },
          {
            "message": "Password must be at least 6 characters",
            "min": 6,
          },
          [Function],
        ]
      }
    >
      <Password
        action="click"
        iconRender={[Function]}
        visibilityToggle={true}
      />
    </FormItem>
    <FormItem
      label="Confirm"
      name="confirm"
      rules={
        [
          {
            "message": "Please confirm your password!",
            "required": true,
          },
          [Function],
        ]
      }
    >
      <Password
        action="click"
        iconRender={[Function]}
        visibilityToggle={true}
      />
    </FormItem>
    <FormItem>
      <Button
        block={false}
        ghost={false}
        htmlType="submit"
        loading={false}
        type="primary"
      >
        Register
      </Button>
      <Button
        block={false}
        ghost={false}
        htmlType="button"
        loading={false}
        onClick={[Function]}
        type="link"
      >
        Already registered? Click here to login
      </Button>
    </FormItem>
  </ForwardRef(InternalForm)>
</Card>
`;

exports[`render login form component > should show loader with attemptingRegister 1`] = `
<Card
  className="register-form__card"
  size="small"
  title="Register"
>
  <ForwardRef(InternalForm)
    onFinish={[Function]}
  >
    <FormItem
      label="Username"
      name="username"
      rules={
        [
          {
            "message": "Username must be at least 3 characters",
            "min": 3,
          },
          {
            "message": "Please input your username!",
            "required": true,
          },
        ]
      }
    >
      <Input
        type="text"
      />
    </FormItem>
    <FormItem
      label="Email"
      name="email"
      rules={
        [
          {
            "message": "The input is not valid email!",
            "type": "email",
          },
          {
            "message": "Please input an email!",
            "required": true,
          },
        ]
      }
    >
      <Input
        type="text"
      />
    </FormItem>
    <FormItem
      label="Password"
      name="password"
      rules={
        [
          {
            "message": "Please input your password!",
            "required": true,
          },
          {
            "message": "Password must be at least 6 characters",
            "min": 6,
          },
          [Function],
        ]
      }
    >
      <Password
        action="click"
        iconRender={[Function]}
        visibilityToggle={true}
      />
    </FormItem>
    <FormItem
      label="Confirm"
      name="confirm"
      rules={
        [
          {
            "message": "Please confirm your password!",
            "required": true,
          },
          [Function],
        ]
      }
    >
      <Password
        action="click"
        iconRender={[Function]}
        visibilityToggle={true}
      />
    </FormItem>
    <FormItem>
      <Button
        block={false}
        ghost={false}
        htmlType="submit"
        loading={true}
        type="primary"
      >
        Register
      </Button>
      <Button
        block={false}
        ghost={false}
        htmlType="button"
        loading={false}
        onClick={[Function]}
        type="link"
      >
        Already registered? Click here to login
      </Button>
    </FormItem>
  </ForwardRef(InternalForm)>
</Card>
`;

exports[`render login form component should render RegisterForm component 1`] = `
<Card
  centered={true}
  title="Register"
>
  <Loader
    isLoading={false}
    loadingText="Registering"
  >
    <form
      className="ui form"
    >
      <div
        className="field"
      >
        <label>
          Username
        </label>
        <input
          name="username"
          onChange={[Function]}
          placeholder="Username"
          type="text"
        />
      </div>
      <div
        className="field"
      >
        <label>
          Email
        </label>
        <input
          name="email"
          onChange={[Function]}
          placeholder="Email"
          type="text"
        />
      </div>
      <div
        className="field"
      >
        <label>
          Password
        </label>
        <input
          name="password"
          onChange={[Function]}
          placeholder="Password"
          type="password"
        />
      </div>
      <div
        className="field"
      >
        <label>
          Confirm Password
        </label>
        <input
          name="confirm"
          onChange={[Function]}
          placeholder="Confirm Password"
          type="password"
        />
      </div>
      <div
        className="field"
      >
        <div
          className="ui label"
        >
          Passwords must be at least 
          6
           
          characters long and contain a number.
        </div>
      </div>
      <button
        className="ui button"
        onClick={[Function]}
        type="submit"
      >
        Register
      </button>
      Already registered? 
      <Link
        to="/login"
      >
        Login
      </Link>
    </form>
  </Loader>
</Card>
`;

exports[`render login form component should show loader with attemptingRegister 1`] = `
<Card
  centered={true}
  title="Register"
>
  <Loader
    isLoading={true}
    loadingText="Registering"
  >
    <form
      className="ui form"
    >
      <div
        className="field"
      >
        <label>
          Username
        </label>
        <input
          name="username"
          onChange={[Function]}
          placeholder="Username"
          type="text"
        />
      </div>
      <div
        className="field"
      >
        <label>
          Email
        </label>
        <input
          name="email"
          onChange={[Function]}
          placeholder="Email"
          type="text"
        />
      </div>
      <div
        className="field"
      >
        <label>
          Password
        </label>
        <input
          name="password"
          onChange={[Function]}
          placeholder="Password"
          type="password"
        />
      </div>
      <div
        className="field"
      >
        <label>
          Confirm Password
        </label>
        <input
          name="confirm"
          onChange={[Function]}
          placeholder="Confirm Password"
          type="password"
        />
      </div>
      <div
        className="field"
      >
        <div
          className="ui label"
        >
          Passwords must be at least 
          6
           
          characters long and contain a number.
        </div>
      </div>
      <button
        className="ui button"
        onClick={[Function]}
        type="submit"
      >
        Register
      </button>
      Already registered? 
      <Link
        to="/login"
      >
        Login
      </Link>
    </form>
  </Loader>
</Card>
`;
